- shared/lib/date.c introduced a lot of new date functionality has gone in 
  as well (string to int etc)
- Unit-tests for dates
- Spring cleaning of www/webroot/*
- Added a WORKING_ON file for what is currently being worked on.
- Quick hack to support encoded space (%20) in uri.c

Version 0.3.13, 03-aug-2004 (rev. 265+)
- Removed duplicate code (had been moved to shared-lib date.c) in string.c

Version 0.3.13, 04-aug-2004 (rev. 266+)
- Added support for objectd in the glue.
- Added unit-test for objectd.
- Added support for having an ObjectD installed.
- Removed redundant RFC directory
- Fixed broken request-wrapper (introduced with the URI-object)
- Added some .LSP examples.

Version 0.3.13, 06-aug-2004 (rev. 266+)
- Disabled etag for now (it was not working 100%)
- mh/c.c: Object broke when I introduced URI-object. It now gets file-suffix
  from the URI and not the request.
- Jorinde's webpage error-handler is now working again.
- POSTed Content-Type 'x-www-form-urlencoded' now works as expected.
- url encode/decode library introduced (currently only decode).
- html errord is now enabled.
- Added wrappers for session/server and you can now set properties (etc) on
  all objects via the property_wrap (which is inherited by all wrappers).
- Errors that are NOT web-errors now work (they are output using SYSLOG() 
  macro for now) (rev 285)

Version 0.3.14, 12-aug-2004 (rev. 285+)
- htmlerrord.c now hides the last entry in the stack trace
- Minor changes to authentication.
- Clarification in the Glue
- Fixed several bugs in form-handling.
- Added formatting function for numbers.
- Added an independent include file which is included from all glues.
- Just testing some free-text indexing / searching. :)
- Added Phantasmal's objectd
- A few lsp examples/tests
- Moved WORKING_ON to doc
- Making svn.berlios.de the main repository (restructured repo layout)

Version 0.3.15, 27-dec-2004 (?+)
- Minor updates + fixes for 'new' xml-root object.